src/main/java/com/example/orderservice/error/BadRequestException.java
package com.example.orderservice.error;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String message) { super(message); }
}

